# atat

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .secrets.baseline  Dockerfile  Dockerfile.ops  PortfolioProvision.md  README.md  app.py  atst2.code-workspace  celery_worker.py  docker-compose.yml  dump.rdb  ops.Dockerfile  package-lock.json  package.json  pyproject.toml  pytest.ini  python.Dockerfile  requirements.txt  sonar-project.properties  translations.yaml  uwsgi.ini
.circleci/: README.md  config.yml
.github/: dependabot.yml  locust-load-test.yml
.github/workflows/: ci.yml  javascript.yml  loadtest.yml  locust-load-test.yml  python.yml  sonar.yml  tests.yml  uitests.yml
alembic/: env.py
alembic/versions/: 30ea1cb20807_add_job_failure_tables.py  55c44ec15a40_add_signer_to_to.py  59973fa17ded_portfolio_state_machine_table.py  828d8c188dce_update_environment_roles_enum_list.py  b059929adc6d_add_signer_to_to.py  e0c6eb21771f_reset_migrations_with_new_schema.py  ed7fb0017f7d_rename_env_role_status_enum.py  f328f1ea400c_add_disabled_enviornment_role_status.py
ansible/: README.md  infra.yml  remove_gs.sh  runIt.sh
ansible/dh/: dhparams.pem
atat/: app.py  debug.py  jobs.py
atat/domain/: applications.py  auth.py  environments.py  portfolio_roles.py  reports.py  users.py
atat/fn/: .gitignore  deploy.sh  requirements.txt  shared.py  xmlsec-1.3.10-cp38-cp38-linux_x86_64.whl
atat/forms/: portfolio_member.py  task_order.py  validators.py
atat/models/: environment_role.py  portfolio.py  portfolio_state_machine.py  task_order.py  user.py  utils.py
atat/routes/: ccpo.py  dev.py  errors.py  routes_helpers.py  saml_helpers.py
atat/utils/: azure_api_version.py  config.py  environment.py  json.py  path.py  session_limiter.py
atst/: app.py
atst/domain/: requests.py  task_orders.py  (+1 more)
celery_tests/: test_celery_check.py
config/: base.ini
deploy/: README.md
docs/: WindowsSubsystemLinux.md
js/: index.js
load-test/: Dockerfile  README.md  locustfile.py
ops/: create-saml-idp.py  create-service-principle.sh  readme.md  requirements.txt
sample-server/: README
script/: README.md  add_ccpo_users.py  add_users_to_aad_tenant.py  cibuild  create_database.py  create_database_user.py  data-feeder.py  generate_under_maintenance.py  grant_ccpo_perms.py  k8s_config  manual_provisioning  refresh_develop  reset_database.py  seed_roles.py  seed_sample.py  tail_logs.py  teardown_hybrid.py  test  tf_plan.sh  update
styles/: atat.scss
templates/: base_admin.html  home.html  login.html  member_new.html.to  member_new_access.html.to  member_new_account.html.to  member_new_role.html.to  members_menu.html.to  requests.html
terraform/: README.md
tests/: conftest.py  factories.py  mock_azure.py  render_vue_component.py  test_access.py  test_app.py  test_debug.py  test_jobs.py
uitests/: README.md  pytest.ini
(+333 files in other folders)
