[tool.poetry]
authors = ["Promptworks <hello@promptworks.com>"]
description = ""
license= "MIT"
name = "atat"
version = "0.1.0"
repository = "https://github.com/dod-ccpo/atst"
homepage = "https://github.com/dod-ccpo/atst"

[tool.poetry.dependencies]
alembic = "*"
azure-storage-blob = "*"
cachetools = "^4.1.1"
celery = "*"
email-validator = '*'
flask = "*"
flask-assets = "*"
flask-session = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
lockfile = "*"
msrestazure = "*"
onelogin = "*"
pendulum = "*"
psycopg2-binary = "*"
pydantic = "*"
pyopenssl = "*"
python = "3.7.3"
python3-saml = "^1.9.0"
PyYAML = "*"
redis = "*"
requests = "*"
sqlalchemy = ">=1.3.12"
sqlalchemy-json = "*"
transitions = "*"
Unipath = "*"
webassets = "*"
werkzeug = "*"

[tool.poetry.dev-dependencies]
azure-common = "*"
azure-storage-common = "*"
azure-storage-nspkg = "*"
bandit = "*"
beautifulsoup4 = "*"
black = "^19.10b0"
blinker = "*"
detect-secrets = "*"
factory-boy = "*"
honcho = "*"
ipdb = "*"
ipython = "*"
mypy = "*"
packaging = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-depends = "^1.0.1"
pytest-env = "*"
pytest-flask = "*"
pytest-mock = "*"
rope = "*"
selenium = "*"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = 'black'
