[tool.poetry]
authors = ["Promptworks <hello@promptworks.com>"]
description = ""
license= "MIT"
name = "atat"
version = "0.1.0"
repository = "https://github.com/dod-ccpo/atat"
homepage = "https://github.com/dod-ccpo/atat"



[tool.poetry.dependencies]
python = "~3.8.7"
alembic = "*"
azure-storage-blob = "*"
cachetools = "^4.2.2"
celery = "^4.4.7"
flask = "*"
flask-assets = "*"
flask-session = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
lockfile = "*"
msrestazure = "*"
pendulum = "*"
"psycopg2-binary" = "*"
pydantic = "*"
pyopenssl = "*"
PyYAML = "*"
redis = "*"
requests = "*"
sqlalchemy = "~1.4.13"
sqlalchemy-json = "*"
transitions = "*"
Unipath = "*"
webassets = "*"
werkzeug = "*"
email-validator = '*'
python3-saml = "^1.9.0"
Flask-DebugToolbar = "^0.11.0"

[tool.poetry.dev-dependencies]
bandit = "*"
pytest = "*"
pylint = "*"
factory-boy = "*"
pytest-flask = "*"
pytest-env = "*"
pytest-cov = "*"
selenium = "*"
honcho = "*"
blinker = "*"
pytest-mock = "*"
detect-secrets = "~1.1.0"
beautifulsoup4 = "*"
mypy = "*"
black = "^21.5b0"
pytest-depends = "^1.0.1"


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = 'black'
